--- a/archi.html
+++ b/archi.html
@@ -151,7 +151,10 @@
             <img src="img/CAO/Coa_page-0042.jpg" id="img1">
             <img src="img/CAO/Coa_page-0043.jpg" id="img1">
              
-            
+          <br><br>
+          <hr>
+          Previous Year Paper<br> <hr>
+          <img src="img/pre/CAO.jpg" alt="" id="img1">
           </center>
 </body>
 </html>
