--- a/web_tech.html
+++ b/web_tech.html
@@ -278,7 +278,13 @@ Ex: 203.197.107.107</p>
     <li>It is used for the verification of hosts, emails, and services.</li>
 </ol>
  
-
+<br><br>
+<center>
+  <hr>
+  Previous Year Paper<br> <hr>
+  <img src="img/pre/web tech.jpg" alt="" id="img1">
+  <img src="img/pre/webtech2.jpg" alt="" id="img1">
+</center>
   </div>
 
 </html>
