--- a/math.html
+++ b/math.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1079,8 +1080,13 @@
 
 
 
-
-         
+       <br><br>
+      <center>
+        <hr>
+        Previous Year Paper<br> <hr>
+        <img src="img/pre/Math.jpg" alt="" id="img1">
+        <img src="img/pre/Math2.jpg" alt="" id="img1">
+      </center>
         </section>
       </div>
 </html>
