--- a/startup.html
+++ b/startup.html
@@ -220,7 +220,13 @@ High ‘nAch’ motivates an entrepreneur to work hard, take calculated risks an
 
  
 
-
+<br><br>
+<center>
+  <hr>
+  Previous Year Paper<br> <hr>
+  <img src="img/pre/Startup.jpg" alt="" id="img1">
+  
+</center>
 
  </div>
 
