--- a/os.html
+++ b/os.html
@@ -561,7 +561,7 @@ The term “physical address” describes the precise position of necessary data
 <center>
   <hr>
   Previous Year Paper<br> <hr>
-  <img src="img/pre/os.jpg" alt="" id="img1">
+  <img src="img/pre/OS.jpg" alt="" id="img1">
   <img src="img/pre/Os2.jpg" alt="" id="img1">
 </center>
 
