--- a/archi.html
+++ b/archi.html
@@ -104,6 +104,9 @@
       </a>
       </div>  
       <div>
+        <a href="Quizes/archi.html">Mcq Questions</a>
+        <a href="archi_viva.html"> Viva Questions</a>
+        <hr>
         <section>
           <center><h1>Computer  Orgranisation and Architecture</h1></center>
           <center>
