--- a/python.html
+++ b/python.html
@@ -119,6 +119,9 @@
     
     </style>
     <div id="body">
+      <a href="Quizes/python.html">MCQ</a>
+      <a href="python_viva.html">Viva</a>
+      <hr>
       <div id="watermark">@Debuggers</div>
 
       <div id="main">
