--- a/os.html
+++ b/os.html
@@ -96,6 +96,9 @@
     
   
     <div id="body">
+      <a href="Quizes/os.html">MCQ</a>
+      <a href="os_viva.html">Viva</a>
+      <hr>
      
       <div id="watermark">@Debuggers</div>
 
