--- a/web_tech.html
+++ b/web_tech.html
@@ -97,7 +97,8 @@
   <div id="body">
     <div id="watermark">@Debuggers</div>
     
-    <a href="Quizes/web_tech_quiz.html">Web Technology Quiz</a><hr>
+    <a href="Quizes/web_tech_quiz.html">MCQ</a>
+    <a href="web_viva.html">Viva</a><hr>
     <center>
       <h1>Web Technology</h1>
     </center>
