--- a/dbms.html
+++ b/dbms.html
@@ -215,6 +215,7 @@ if (cookieValue === "active") {
 <!-- </marquee> -->
 
 <a href="python_notes.html">Python Viva Important</a>&nbsp;
+<a href="https://bit.ly/group_debuggers">Join Us</a>&nbsp;
 <!-- <a href="mech_mcq.html">Assignment Questions DAA</a>  -->
  <hr>
  
