--- a/join.html
+++ b/join.html
@@ -117,6 +117,11 @@
         .form-control::placeholder{
             color: black;
         }
+        #Alerting{
+            font-family: 'Courier New', Courier, monospace;
+            margin-top: 20px;
+            color: black;
+        }
   </style>
   <br><br><br><br><br>
   <section class="home-newsletter">
@@ -130,7 +135,9 @@
               <span class="input-group-btn">
                 <button onclick="subscribe()" class="btn btn-theme" type="button">Join</button>
               </span>
-            </div>
+             
+            </div> 
+            <div id="Alerting"></div>
           </div>
         </div>
       </div>
@@ -149,7 +156,7 @@ function subscribe() {
   xhr.onreadystatechange = function() {
     if (xhr.readyState == 4 && xhr.status == 200) {
       if (xhr.responseText === "Email sent successfully!") {
-        alert("Check your email for the joining link.");
+        document.getElementById("Alerting").value = "Check your email for the joining link.";
         window.location.href = "dbms.html"; // Redirect to dbms.html
       } else {
         alert("Failed to send email. Please try again later.");
