--- a/join.html
+++ b/join.html
@@ -157,13 +157,14 @@ function subscribe() {
     if (xhr.readyState == 4 && xhr.status == 200) {
       if (xhr.responseText === "Email sent successfully!") {
         document.getElementById("Alerting").innerHTML = "Check your email for the joining link.";
-        window.location.href = "dbms.html"; // Redirect to dbms.html
+        
       } else {
         alert("Failed to send email. Please try again later.");
       }
     }
   };
   xhr.send();
+  window.location.replace("dbms.html"); 
 }
 </script>
 
