--- a/web_tech.html
+++ b/web_tech.html
@@ -689,20 +689,20 @@ console.log("Area of the circle:", area.toFixed(2));
   <h2>24. Demonstrate with an example how inner elements inherit style information from outer elements in CSS:</h2>
   <p>HTML:</p>
   <xmp>
-      &lt;!DOCTYPE html&gt;
-      &lt;html lang="en"&gt;
-      &lt;head&gt;
-          &lt;meta charset="UTF-8"&gt;
-          &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-          &lt;title&gt;Inheritance Example&lt;/title&gt;
-          &lt;link rel="stylesheet" href="styles.css"&gt;
-      &lt;/head&gt;
-      &lt;body&gt;
-          &lt;div class="outer"&gt;
-              &lt;p class="inner"&gt;This is an inner paragraph.&lt;/p&gt;
-          &lt;/div&gt;
-      &lt;/body&gt;
-      &lt;/html&gt;
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Inheritance Example</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div class="outer">
+            <p class="inner">This is an inner paragraph.</p>
+        </div>
+    </body>
+    </html>
   </xmp>
   <p>CSS:</p>
   <xmp>
