--- a/review.html
+++ b/review.html
@@ -62,7 +62,7 @@
     // If the username is available, continue, else redirect to the login page
     if (username) {
         // Submit review form
-        document.getElementById('reviewForm').addEventListener('submit', function (event) {
+        document.getElementById('reviewForm').addEventListener('submit', function (event) {debugger;
             event.preventDefault(); // Prevent the default form submission
             
             // Get the review text from the form
