--- a/review.html
+++ b/review.html
@@ -91,8 +91,10 @@
                 console.log("Response:", data); // Log the response from the API
                 // If the review was submitted successfully, set the 'reviewed' cookie to true
                 document.cookie = 'reviewed=true';
-                // Redirect to dbms.html after setting the cookie
-                window.location.href = 'dbms.html';
+                // Redirect to dbms.html after setting the cookie with a 2-second delay
+                setTimeout(function() {
+                    window.location.href = 'dbms.html';
+                }, 2000); // 2000 milliseconds = 2 seconds
             })
             .catch(error => {
                 console.error('Error:', error); // Log any errors
@@ -104,6 +106,7 @@
         window.location.href = "login.html";
     }
 </script>
+
 
 </body>
 </html>
