--- a/review.html
+++ b/review.html
@@ -42,7 +42,7 @@
     <p style="color: green;"> Whatsapp - +91 6207753704</p>
 </center>
 
-<script>
+<script>debugger;
     // Function to retrieve the value of a cookie by its name
     function getCookie(cookieName) {
         const cookies = document.cookie.split(';');
@@ -78,14 +78,12 @@
 
             console.log("Data:", data); // Log the data object to check its structure
 
-            // Construct the URL with username and review as query parameters
-            const url = 'https://arambhsoftech.com/Helpdesk/submit_review.php?username=' + encodeURIComponent(username) + '&review=' + encodeURIComponent(reviewText);
-
             // Send the data to the API endpoint
-            fetch(url, {
+            fetch('https://arambhsoftech.com/Helpdesk/submit_review.php', {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json',
+                    'Access-Control-Allow-Origin': 'https://aman5062.github.io'
                 },
                 body: JSON.stringify(data)
             })
@@ -109,6 +107,7 @@
         window.location.href = "login.html";
     }
 </script>
+
 
 
 
