--- a/dbms.html
+++ b/dbms.html
@@ -9,65 +9,78 @@
 <link rel="stylesheet" type="text/css" href="style.css?v=2" />
 <script src="script.js"></script>
 <script>
-    // Function to retrieve the value of a cookie by its name
-    function getCookie(cookieName) {
-        const cookies = document.cookie.split(';');
-        for (let i = 0; i < cookies.length; i++) {
-            const cookie = cookies[i].trim();
-            // Check if the cookie starts with the desired name
-            if (cookie.startsWith(cookieName + '=')) {
-                return cookie.substring(cookieName.length + 1);
-            }
+   // Function to retrieve the value of a cookie by its name
+function getCookie(cookieName) {
+    const cookies = document.cookie.split(';').map(cookie => cookie.trim());
+    for (let cookie of cookies) {
+        const [name, value] = cookie.split('=');
+        if (name === cookieName) {
+            return decodeURIComponent(value);
         }
-        return null; // Return null if cookie not found
     }
+    return null;
+}
 
-    // Check if the cookie 'user' exists
-    var cookieValue = getCookie('user');
+// Check if the cookie 'user' exists
+var cookieValue = getCookie('user');
 
-    // If the cookie value is "active", continue, else redirect to the login page
-    if (cookieValue === "active") {
-        // Retrieve the username from the cookie
-        const username = getCookie('username');
+// If the cookie value is "active", continue, else redirect to the login page
+if (cookieValue === "active") {
+    // Retrieve the username from the cookie
+    const username = getCookie('username');
 
-        // Check if the username exists
-        if (username) {
-            // Check if the "reviewed" cookie exists and its value is true
-            const reviewed = getCookie('reviewed');
-            if (reviewed === "true") {
-                // Prepare the data to be sent to the API
-                const data = { username: username };
+    // Check if the username exists
+    if (username) {
+        // Check if the "reviewed" cookie exists and its value is true
+        const reviewed = getCookie('reviewed');
+        if (reviewed === "true") {
+            // Prepare the data to be sent to the API
+            const data = { username: username };
 
-                // Send the data to the API endpoint
-                fetch('https://arambhsoftech.com/Helpdesk/user_check.php?username=' + encodeURIComponent(username))
-                    .then(response => response.json())
-                    .then(data => {
-                        console.log(data); // Log the response from the API
-                        // Check if login count is greater than 5
-                        if (data.login_count > 5) {
-                            // Redirect to the review page
-                            window.location.href = "review.html";
-                        } else {
-                            // Continue with further actions if needed
-                        }
-                    })
-                    .catch(error => {
-                        console.error('Error:', error); // Log any errors
-                        // Handle errors if needed
-                    });
-            } else {
-                // Redirect to the review page if the "reviewed" cookie is not set to true
-                window.location.href = "review.html";
-            }
+            // Send the data to the API endpoint
+            fetch('https://arambhsoftech.com/Helpdesk/user_check.php', {
+                method: 'POST', // Depending on API requirements
+                headers: {
+                    'Content-Type': 'application/json',
+                    // Include authentication token or credentials if required
+                },
+                body: JSON.stringify(data)
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
+            .then(data => {
+                console.log(data); // Log the response from the API
+                // Check if login count is greater than 5
+                if (data.login_count > 5) {
+                    // Redirect to the review page
+                    window.location.href = "review.html";
+                } else {
+                    // Continue with further actions if needed
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error); // Log any errors
+                // Display error message to the user
+                alert('An error occurred. Please try again later.');
+            });
         } else {
-            console.log('Username not found in cookie'); // Log if username not found in cookie
-            // Redirect to the login page
-            window.location.href = "login.html";
+            // Redirect to the review page if the "reviewed" cookie is not set to true
+            window.location.href = "review.html";
         }
     } else {
+        console.log('Username not found in cookie'); // Log if username not found in cookie
         // Redirect to the login page
         window.location.href = "login.html";
     }
+} else {
+    // Redirect to the login page
+    window.location.href = "login.html";
+}
+
 </script>
 
     
