--- a/dbms.html
+++ b/dbms.html
@@ -8,7 +8,7 @@
 </head>
 <link rel="stylesheet" type="text/css" href="style.css?v=2" />
 <script src="script.js"></script>
-<script>
+<script>debugger;
    // Function to retrieve the value of a cookie by its name
 function getCookie(cookieName) {
     const cookies = document.cookie.split(';').map(cookie => cookie.trim());
