--- a/review.html
+++ b/review.html
@@ -77,46 +77,50 @@
             
             // Get the review text from the form
             const reviewText = document.getElementById('review').value;
-            if(reviewText=""){
-                document.getElementById("ale").innerHTML = "<p>Add a review !!!</p>";
-            }else{
-            // Prepare the data to be sent to the API
-            const data = {
-                username: username,
-                review: reviewText
-            };
+            
+            // Check if the review text is not empty
+            if (reviewText.trim() === "") {
+                document.getElementById("ale").innerHTML = "<p>Please add a review before submitting.</p>";
+            } else {
+                // Prepare the data to be sent to the API
+                const data = {
+                    username: username,
+                    review: reviewText
+                };
 
-            console.log("Data:", data); // Log the data object to check its structure
+                console.log("Data:", data); // Log the data object to check its structure
 
-            // Send the data to the API endpoint
-            fetch('https://arambhsoftech.com/Helpdesk/submit_review.php', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Access-Control-Allow-Origin': 'https://aman5062.github.io'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log("Response:", data); // Log the response from the API
-                // If the review was submitted successfully, set the 'reviewed' cookie to true
-                document.cookie = 'reviewed=true';
-                // Redirect to dbms.html after setting the cookie with a 2-second delay
-                setTimeout(function() {
-                    window.location.href = 'dbms.html';
-                }, 1000); // 2000 milliseconds = 2 seconds
-            })
-            .catch(error => {
-                console.error('Error:', error); // Log any errors
-                // Handle errors if needed
-            });
-        }});
+                // Send the data to the API endpoint
+                fetch('https://arambhsoftech.com/Helpdesk/submit_review.php', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Access-Control-Allow-Origin': 'https://aman5062.github.io'
+                    },
+                    body: JSON.stringify(data)
+                })
+                .then(response => response.json())
+                .then(data => {
+                    console.log("Response:", data); // Log the response from the API
+                    // If the review was submitted successfully, set the 'reviewed' cookie to true
+                    document.cookie = 'reviewed=true';
+                    // Redirect to dbms.html after setting the cookie with a 2-second delay
+                    setTimeout(function() {
+                        window.location.href = 'dbms.html';
+                    }, 2000); // 2000 milliseconds = 2 seconds
+                })
+                .catch(error => {
+                    console.error('Error:', error); // Log any errors
+                    // Handle errors if needed
+                });
+            }
+        });
     } else {
         // Redirect to the login page
         <!-- window.location.href = "login.html"; -->
     }
 </script>
+
 
 
 
