--- a/reviews.html
+++ b/reviews.html
@@ -107,7 +107,7 @@
 <body>
 
     <div class="container">
-        <center><h2>Login Data</h2></center>
+        <center><h2>Review Data</h2></center>
     
        <center> <div>Total Logins: <span id="total-users"></span></div></center>
     
@@ -115,9 +115,8 @@
             <table id="user-table">
                 <thead>
                     <tr>
-                        <th>S.No</th>
                         <th>Username</th>
-                        <th>Time</th>
+                        <th>Review</th>
                     </tr>
                 </thead>
                 <tbody id="user-data">
