--- a/reviews.html
+++ b/reviews.html
@@ -109,7 +109,7 @@
     <div class="container">
         <center><h2>Review Data</h2></center>
     
-       <center> <div>Total Logins: <span id="total-users"></span></div></center>
+       <center> <div>Total : <span id="total-users"></span></div></center>
     
         <center>
             <table id="user-table">
