--- a/review.html
+++ b/review.html
@@ -117,7 +117,7 @@
         });
     } else {
         // Redirect to the login page
-        <!-- window.location.href = "login.html"; -->
+        window.location.href = "login.html";
     }
 </script>
 
