--- a/dbms.html
+++ b/dbms.html
@@ -465,6 +465,7 @@
     wishme(username);
     function wishme(username){
         document.getElementById("wishing_part").innerHTML="<b>Welcome Back "+ username+"</b>";
+        bol("Welcome back "+username);
     }
 </script>
 
