--- a/dbms.html
+++ b/dbms.html
@@ -465,7 +465,8 @@
     wishme(username);
     function wishme(username){
         document.getElementById("wishing_part").innerHTML="<b>Welcome Back "+ username+"</b>";
-        bol("Welcome back "+username);
+        let utterance = new SpeechSynthesisUtterance("Welcome back"+ username);
+        window.speechSynthesis.speak(utterance);
     }
 </script>
 
