--- a/dbms.html
+++ b/dbms.html
@@ -468,7 +468,7 @@
         document.getElementById("wishing_part").innerHTML="<b>Welcome Back "+ username+"</b>";
     }
     function suspension(user){
-        if(user==="Tinku Suparii" || user==="Alpha" || user==="Goku"){
+        if(user==="Tinku Suparii" || user==="Alpha" || user==="Goku" || user==="Tinku"){
             window.location.href = "no_user.html";
         }
     }
