--- a/no_user.html
+++ b/no_user.html
@@ -27,8 +27,13 @@
 <div class="container mt-5">
    
 <center>
-    <img src="img/suspension.png" id="img1" alt="">
-</center>
+    <img src="img/suspension.png" id="img1" alt=""></center><br><br>
+    <p>Expected Reasons of suspension : 
+        <br>
+        <li>Fake name</li>
+        <li>Not a member of Debuggers Group</li>
+    </p>
+
 
 </div>
 
