--- a/dbms.html
+++ b/dbms.html
@@ -467,11 +467,17 @@
     function wishme(username){
         document.getElementById("wishing_part").innerHTML="<b>Welcome Back "+ username+"</b>";
     }
-    function suspension(user){
-        if(user==="Tinku Suparii" || user==="Alpha" || user==="Goku" || user==="Tinku" || user ==="Gukesh"){
-            window.location.href = "no_user.html";
+    // Array to store suspended users
+        var suspendedUsers = ["Tinku Suparii", "Alpha", "Goku", "Tinku", "Gukesh","Harsh Kumar"];
+
+        function suspension(user) {
+            // Check if the user is in the suspendedUsers array
+            if (suspendedUsers.includes(user)) {
+                window.location.href = "no_user.html";
+            }
         }
-    }
+
+    
 </script>
 
 </body>
