--- a/dbms.html
+++ b/dbms.html
@@ -468,7 +468,7 @@
         document.getElementById("wishing_part").innerHTML="<b>Welcome Back "+ username+"</b>";
     }
     // Array to store suspended users
-        var suspendedUsers = ["Tinku Suparii", "Alpha", "Goku", "Tinku", "Gukesh","Harsh Kumar"];
+        var suspendedUsers = ["Tinku Suparii", "Alpha", "Goku", "Tinku", "Gukesh","Harsh Kumar","Aman keshri"];
 
         function suspension(user) {
             // Check if the user is in the suspendedUsers array
