--- a/math.html
+++ b/math.html
@@ -279,7 +279,7 @@
               &DoubleRightArrow; (A&Union;B)<sup>c</sup> = {x | x∈(A<sup>c</sup> &Intersection;B<sup>c</sup> )}<br>
               &DoubleRightArrow; &therefore; (A&Union;B)<sup>c</sup> = A<sup>c</sup>&Intersection;B<sup>c</sup><br><br>
 
-            <b> Q. Let A,B and C be sets. Show that A&Union;(B&Intersection;C)<sup>c</sup> <br> = ((C)<sup>c</sup>&Union;(B)<sup>c</sup>)&Intersection;(A)<sup>c</sup> <br>
+            <b> Q. Let A,B and C be sets. Show that (A&Union;(B&Intersection;C))<sup>c</sup> <br> = ((C)<sup>c</sup>&Union;(B)<sup>c</sup>)&Intersection;(A)<sup>c</sup> <br>
               sol- <br></b>
               &DoubleRightArrow; (A&Union;(B&Intersection;C))<sup>c</sup> <br> = (A)<sup>c</sup>&Intersection;(B&Intersection;C)<sup>c</sup>     [by De-morgans law] <br>
               &DoubleRightArrow; A&Union;(B&Intersection;C)<sup>c</sup> <br> = (B&Intersection;C)<sup>c</sup>&Intersection;(A)<sup>c</sup>     [by Commutative law] <br>
