--- a/math.html
+++ b/math.html
@@ -24,6 +24,7 @@
 <link rel="icon" href="logo.png" type="image/png">
 <link rel="stylesheet" type="text/css" href="style.css?v=2" />
 <script src="script.js"></script>
+<script src="count.js"></script>
 <style>
   #img1{
       width:300px;
@@ -104,8 +105,12 @@
           <span><i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i></span>
       </a>
       </div>  
-      <div>
+      <div>  
+        
+      <center><div style="color: red;" id="countdownmath"></div></center>
+        <hr>
         <section>
+       
           <center><h1>Mathematics</h1></center>
 	  <h4><b><u><li>Discrete Mathematics -</li></u></b></h4>
           It is the part of mathematics devoted to the study of discrete (distinct or unconnected) object.<br>
