--- a/math.html
+++ b/math.html
@@ -920,8 +920,8 @@
       Eg- <b>Fibonacci Numbers</b>
       The number 1, 1, 2, 3, 5, 8,..... are Fibonacci numbers. They have a Fibonacci number, except the first two, is the sum of two immediately preceding Fibonacci numbers. <br>
       The recursive definition of n<sup>th</sup> Fibonacci number as:<br>
-      (a)f_{1}=f_{2}=1 (initial condition)<br>
-      (b) f_{n}=f_{n-1}+f_{n-2},n&GreaterEqual;3 (recurrence relation)<br><br>
+      (a)f<sub>1</sub> = f<sub>2</sub> = 1 (initial condition)<br>
+      (b) f<sub>n</sub> = f<sub>n-1</sub> + f<sub>n-2</sub>,n&GreaterEqual;3 (recurrence relation)<br><br>
 
       Eg - <b>Tower of Hanoi-</b><br>
       It is also called <b> problem of Benares Temple or Tower of Brahma</b> <br>
