--- a/no_user.html
+++ b/no_user.html
@@ -33,6 +33,11 @@
         <li>Fake name</li>
         <li>Not a member of Debuggers Group</li>
     </p>
+    <p>How to solve this : 
+        <br>
+        <li>Reinstall the Helpdesk app</li>
+        <li>And Login with your real name</li>
+    </p>
 
 
 </div>
