--- a/os.html
+++ b/os.html
@@ -98,6 +98,7 @@
     <div id="body">
       <a href="Quizes/os.html">MCQ</a>
       <a href="os_viva.html">Viva</a>
+      <a href="Qbs_os.html">Question Bank Solution</a>
       <hr>
      
       <div id="watermark">@Debuggers</div>
