--- a/archi.html
+++ b/archi.html
@@ -105,7 +105,7 @@
       </div>  
       <div>
         <a href="Quizes/archi.html">Mcq Questions</a>
-        <a href="archi_viva.html"> Viva Questions</a>
+        <a href="coa_imp.html"> Important Questions</a>
         <hr>
         <section>
           <center><h1>Computer  Orgranisation and Architecture</h1></center>
