--- a/web_tech.html
+++ b/web_tech.html
@@ -98,7 +98,7 @@
     <div id="watermark">@Debuggers</div>
     
     <a href="Quizes/web_tech_quiz.html">MCQ</a>
-    <a href="web_viva.html">Viva</a><hr>
+    <a href="web_imp.html">Important Questions</a><hr>
     <center>
       <h1>Web Technology</h1>
     </center>
