--- a/web_imp.html
+++ b/web_imp.html
@@ -221,7 +221,7 @@
 
            </p>
            <br>
-          <b>Inline CSS:</b> You can embed CSS rules within the &ltstyle&gt element in the &lthead&gt section of an HTML document. This method is suitable for applying styles to a single HTML page. <br>Example:
+          <b>Internal CSS:</b> You can embed CSS rules within the &ltstyle&gt element in the &lthead&gt section of an HTML document. This method is suitable for applying styles to a single HTML page. <br>Example:
            <br>
            <xmp>
             <head>
