--- a/dbms.html
+++ b/dbms.html
@@ -116,7 +116,7 @@
     
 <script>
     window.onload = function() {
-        
+        window.location.href = "outofservice.html"; 
     };
 </script>
 <script
