--- a/archi.html
+++ b/archi.html
@@ -158,6 +158,10 @@
           <hr>
           Previous Year Paper<br> <hr>
           <img src="img/pre/CAO.jpg" alt="" id="img1">
+          <img src="img/pre/pyq_mid_coa_23-24.jpg" alt="" id="img1">
+          <img src="img/pre/pyq_end_coa1_23-24.jpg" alt="" id="img1">
+          <img src="img/pre/pyq_end_coa2_23-24.jpg" alt="" id="img1">
+
           </center>
 </body>
 </html>
