--- a/math.html
+++ b/math.html
@@ -1244,6 +1244,9 @@
         Previous Year Paper<br> <hr>
         <img src="img/pre/Math.jpg" alt="" id="img1">
         <img src="img/pre/Math2.jpg" alt="" id="img1">
+        <img src="img/pre/pyq_mid_math_23-24.jpg" alt="" id="img1">
+        <img src="img/pre/pyq_end_math1_23-24.jpg" alt="" id="img1">
+        <img src="img/pre/pyq_end_math2_23-24.jpg" alt="" id="img1">
       </center>
         </section>
       </div>
