--- a/os.html
+++ b/os.html
@@ -567,6 +567,9 @@ The term “physical address” describes the precise position of necessary data
   Previous Year Paper<br> <hr>
   <img src="img/pre/OS.jpg" alt="" id="img1">
   <img src="img/pre/Os2.jpg" alt="" id="img1">
+  <img src="img/pre/pyq_mid_os_23-24.jpg" alt="" id="img1">
+  <img src="img/pre/pyq_end_os1_23-24.jpg" alt="" id="img1">
+  <img src="img/pre/pyq_end_os2_23-24.jpg" alt="" id="img1">
 </center>
 
     </div>
