--- a/startup.html
+++ b/startup.html
@@ -225,6 +225,10 @@ High ‘nAch’ motivates an entrepreneur to work hard, take calculated risks an
   <hr>
   Previous Year Paper<br> <hr>
   <img src="img/pre/Startup.jpg" alt="" id="img1">
+  <img src="img/pre/pyq_mid_startup_23-24.jpg" alt="" id="img1">
+  <img src="img/pre/pyq_end_startup1_23-24.jpg" alt="" id="img1">
+  <img src="img/pre/pyq_end_startup2_23-24.jpg" alt="" id="img1">
+
   
 </center>
 
