--- a/web_tech.html
+++ b/web_tech.html
@@ -716,6 +716,16 @@ console.log("Area of the circle:", area.toFixed(2));
       }
     </xmp>
 
+    <br><br><br><br>
+    <center>
+      <hr>
+      Previous Year Paper<br> <hr>
+      <img src="img/pre/web tech.jpg" alt="" id="img1">
+      <img src="img/pre/webtech2.jpg" alt="" id="img1">
+      <img src="img/pre/pyq_mid-webtech_23-24.jpg" alt="" id="img1">
+      <img src="img/pre/pyq_end_webtech1_23-24.jpg" alt="" id="img1">
+      <img src="img/pre/pyq_end_webtech2_23-24.jpg" alt="" id="img1">
+    </center>
   </body>
 
   </div>
