--- a/os.html
+++ b/os.html
@@ -98,7 +98,7 @@
       
       <center><h1>Operating System</h1></center><br><br>
 
-      <h3><b>Opreting system :- </b></h3>
+      <h3><b>Operating system :- </b></h3>
       It is a callection of a programs that stablished the relationship between hardware adn user.  Every computer system must have at least one operating system to run other programs. Applications like Browsers, MS Office, Notepad Games, etc., need some environment to run and perform its tasks.
 
       The OS helps you to communicate with the computer without knowing how to speak the computer’s language. It is not possible for the user to use any computer or mobile device without having an operating system.
